feat: v0.7.6 updates
